# MsMsCompression

./: CHANGELOG.md  README.md  README.txt  benchmark.py  compress.js  main.py  pyproject.toml  requirements.txt
msms_compression/: utils.py
src/msms_compression/: __init__.py  base_compressor.py  compression_strategies.py  compressors.py  data_compressor.py  encoder.py  spectrum_compressor.py  utils.py
tests/: test_compression_strategies.py  test_compressors.py
